<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/topicListFragment"
        android:icon="@drawable/ic_nav_study"
        android:title="@string/nav_study" />
    <item
        android:id="@+id/examListFragment"
        android:icon="@drawable/ic_nav_exam"
        android:title="@string/nav_exam" />
    <item
        android:id="@+id/dictionaryFragment"
        android:icon="@drawable/ic_nav_dictionary"
        android:title="@string/nav_dictionary" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>