<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lori.view.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/topicListFragment"
        android:name="com.example.lori.view.TopicListFragment"
        android:label="@string/nav_study"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/examListFragment"
        android:name="com.example.lori.view.ExamListFragment"
        android:label="@string/nav_exam"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.example.lori.view.DictionaryFragment"
        android:label="@string/nav_dictionary"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.lori.view.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_placeholder" />

</navigation>